Fixing Small Issues with alignment
Fixed small issues through files.

--- a/css/media-object.css
+++ b/css/media-object.css
@@ -7,6 +7,11 @@
 	text-align: center;
 }
 
+.media-alt {
+	overflow: hidden;
+	padding-top: 1rem;
+}
+
 .media-img {
 	float: left;
 	margin: 0 10px 00;	
